2.0.12.dev0
 * #1127: Fix for the database hooks not respecting the "working_directory" option.
 * #1181: Add an "ask_for_password" option to the KeePassXC credential hook for disabling
   KeePassXC's password prompt, e.g. if you're only using a key file to decrypt your database.
 * #1184: Fix the fish shell completion's detection of version mismatches.
 * In the SQLite database hook, run SQLite such that it exits upon encountering an error instead of,
   you know, not doing that.
 * Add documentation on repositories, including SSH, Rclone, S3, and B2:
   https://torsion.org/borgmatic/reference/configuration/repositories/
 * Improve documentation search results for individual configuration options.
 * Add borgmatic release artifacts (wheel and tarball) to each release on the releases page:
   https://projects.torsion.org/borgmatic-collective/borgmatic/releases
 * Move the tarball of borgmatic's HTML documentation from the packages page to the releases page.

2.0.11
 * #957: Document borgmatic's limitations around parallelism—both its own and Borg's. See the
   documentation for more information:
   https://torsion.org/borgmatic/how-to/make-per-application-backups/#limitations
 * #1165: Fix for when the systemd service directories (RuntimeDirectory and StateDirectory) each
   contain multiple paths.
 * #1168: Fix for the "list", "info", and "delete" options in "extra_borg_options" being ignored
   when "--archive" is omitted with Borg 1.x.
 * #1169: Fix for a regression in the ZFS, LVM, and Btrfs hooks in which partial excludes of
   snapshot paths were ignored.
 * #1170: Fix for an inconsistent log level for Borg's last output line before exiting.
 * #1172: Add an "environment" option to the Sentry monitoring hook.
 * #1176: Fix the "--repository" flag not applying to command hooks.
 * Add a "rename" option to "extra_borg_options" to support passing arbitrary flags to "borg
   rename".
 * Add documentation on patterns and excludes: