@@ -3,6 +3,8 @@
  * #1181: Add an "ask_for_password" option to the KeePassXC credential hook for disabling
    KeePassXC's password prompt, e.g. if you're only using a key file to decrypt your database.
  * #1184: Fix the fish shell completion's detection of version mismatches.
+ * #1186: Fix a regression in the Btrfs hook in which subvolume snapshots didn't get cleaned up
+   until the start of the next borgmatic run.
  * In the SQLite database hook, run SQLite such that it exits upon encountering an error instead of,
    you know, not doing that.
  * Add documentation on repositories, including SSH, Rclone, S3, and B2:
